# barney

./: .bandit.yml  .codeclimate.yml  .coveragerc  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
data/: relative_paths.db  speech-mwm.flac
src/barney/: BarneyApp.py  __init__.py  __main__.py
src/barney/Utilities/: BlockSignals.py  ConfigClass.py  ParseAlignments.py  PathMapper.py  TimerLogger.py  colorMaps.py  parsers.py
src/barney/controllers/: AudiotagInterface.py  CacheController.py  LineEditParser.py  ParseManager.py  PlaybackController.py  PlotController.py  TextCompleter.py  __init__.py  controller.py
src/barney/controllers/SubPlotControllers/: FontController.py  SpectrogramController.py  SubPlotController.py  WaveformController.py
src/barney/models/: BarneyThread.py  CompletionModel.py  DataFrameInterface.py  DatabaseModel.py  FileSystemModel.py  LogHandler.py  SortFilterProxyModel.py  __init__.py  colors.py  model.py
src/barney/views/: AboutDialog.py  AlignmentPlot.py  BugDialog.py  FileViewPanel.py  HorizontalSplitter.py  ListView.py  LogEnergyPlot.py  LoggerDialog.py  MainWindow.py  MenuBar.py  PlotArea.py  QRangeSlider.py  SpectrogramPlot.py  StyleDelegate.py  TagDialog.py  TreeView.py  WaveformPlots.py
src/barney/views/Settings/: AudioSettings.py  FontSettings.py  SettingDialog.py  SettingsTab.py  SpectrogramSettings.py  WaveformSettings.py  __init__.py
tests/: conftest.py  helpers.py  markers.py
tests/functional/: test_TreeView.py  test_audioPlayback.py  test_fred.py  test_parser.py  test_sortFilterProxyModel.py  test_waveCaching.py
tests/unittests/: test_AboutDialog.py  test_BugDialog.py  test_FileModel.py  test_is_relative.py  test_pathNormalization.py
