[bumpversion]
current_version = 0.5.2
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[metadata]
name = Barney
summary = "Barney your way to viewing a signal"
author = "Ognyan Moore"
description = "Barney your way to viewing a signal"
author-email = omoore@sensory.com
home-page = "https://github.com/j9ac9k/barney"
license_file = LICENSE
long-description = file: README.md
long_description_content_type = text/markdown
keywords = Barney
classifiers =
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
package_dir =
	=src
install_requires =
	numpy
	scipy
	pandas
	signalworks
	pyqt5
	pyqtgraph
	qtpy
	soundfile
	sounddevice
	typing_extensions
packages = find:

[options.extras_require]
test = pytest; pytest-qt

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
	barney = barney.__main__:main

[bdist_wheel]
python-tag = py39

[flake8]
max-line-length = 120
ignore = E203, E266, E501, W503, B950
exclude =
	.eggs
	.git,
	.venv,
	__pycache__,
	docs/source/conf.py,
	old,
	build,
	dist,
	target,
	ci-helpers,
	setup.cfg,
	patch/*.py
max-complexity = 18
select = B,C,E,F,W,T4,B9
python_version = 3.9

[mypy]
python_version = 3.9
namespace_packages = True
show_column_numbers = True
show_error_context = False
ignore_missing_imports = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_untyped_decorators = False
disallow_incomplete_defs = True
check_untyped_defs = True
warn_return_any = False
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-qtpy.*]
ignore_missing_imports = True

[mypy-signalworks.*]
ignore_missing_imports = True

[mypy-pyqtgraph.*]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-pandas]
ignore_missing_imports = True

[mypy-scipy.signal]
ignore_missing_imports = True

[mypy-scipy.io.wavfile]
ignore_missing_imports = True

[mypy-sounddevice]
ignore_missing_imports = True

[mypy-soundfile]
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[mypy-patch.*]
ignore_missing_imports = True
ignore_errors = True
follow_imports = skip

[aliases]
test = pytest

[bumpversion:file:src/barney/__version__.py]
